crates/runtime/tests/search/snapshots/integration_models__search__no_acceleration-no_vector_engine-dataset-multi_embeddings_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
---
[
  {
    "id": 189,
    "_score": "0.70"
  },
  {
    "id": 212,
    "_score": "0.69"
  },
  {
    "id": 1277,
    "_score": "0.68"
  },
  {
    "id": 195,
    "_score": "0.67"
  }
]
