crates/runtime/tests/search/snapshots/integration_models__search__no_acceleration-no_vector_engine-dataset-vector_search_metadata_megascience_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                     |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer                                                                                                                                               |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                          |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[id, answer, _score]                                                                                                                                                                 |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer]                                                                                                                                                                                                    |
|               |   SortPreservingMergeExec: [_score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                 |
|               |     SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                     |
|               |       SortExec: TopK(fetch=1000), expr=[_score@2 DESC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                          |
|               |         ProjectionExec: expr=[id@0 as id, answer@1 as answer, 1 - cosine_distance(CAST(query_vector() AS List(Field { data_type: Float32, nullable: true })), CAST(answer_embedding@2 AS List(Field { data_type: Float32, nullable: true }))) as _score] |
|               |           CooperativeExec                                                                                                                                                                                                                                |
|               |             BytesProcessedExec                                                                                                                                                                                                                           |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                       |
|               |                 CooperativeExec                                                                                                                                                                                                                          |
|               |                   EmbeddingTableExec                                                                                                                                                                                                                     |
|               |                                                                                                                                                                                                                                                          |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
