crates/runtime/tests/search/snapshots/integration_models__search__no_acceleration-no_vector_engine-no_text_engine-dataset-multi_embeddings_megascience_vector_search_sql_no_score.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
[
  {
    "id": 189,
    "answer": "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
  },
  {
    "id": 212,
    "answer": "\\[\n(2y)^2 = (2 \\times 2)^2 = 4^2 = \\boxed{16}\n\\]"
  },
  {
    "id": 1277,
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
  },
  {
    "id": 195,
    "answer": "\\[\n2x^2 = 2(-3)^2 = 2(9) = \\boxed{18}\n\\]"
  }
]
